# prism

./: .devcontainer.json  .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain
.github/: CODEOWNERS
.github/workflows/: pr.yml  push.yml  tag.yml
benches/: block_bench.rs  log_bench.rs
proto/: cluster.proto  frontend.proto  raft.proto
src/: base.rs  lib.rs  prismctl.rs  prismd.rs
src/hash/: mod.rs
src/log/: config.rs  error.rs  filter.rs  level.rs  mod.rs
src/logging/: config.rs  error.rs  level.rs  mod.rs
src/raft/: candidate.rs  commiter.rs  consensus.rs  entry.rs  error.rs  follower.rs  leader.rs  log.rs  metadata.rs  mod.rs  models.rs  peer.rs  state_machine.rs  syncer.rs  test_harness.rs
src/raft/cluster/: client.rs  mod.rs  peer.rs  peers.rs  set.rs
src/raft/consensus/: cluster.rs  frontend.rs  mod.rs  module.rs  quorum.rs  raft.rs  repo.rs
src/raft/log/: entry.rs  iter.rs  mod.rs  store.rs  utils.rs
src/raft/state/: log.rs  mod.rs  mode.rs  persistent.rs  server_state.rs  volatile.rs  watcher.rs
src/raft/state/atomic/: index.rs  leader.rs  mod.rs  mode.rs
src/raft/workers/: candidate.rs  commiter.rs  flusher.rs  follower.rs  leader.rs  mod.rs  syncer.rs
src/rpc/: interceptor.rs  mod.rs  server.rs
src/rpc/cluster/: handler.rs  mod.rs  proto.rs
src/rpc/frontend/: handler.rs  mod.rs  proto.rs
src/rpc/raft/: handler.rs  mod.rs  proto.rs
src/serde/: deserialize.rs  error.rs  mod.rs  padding.rs  serialize.rs  valid.rs
src/store/: backend.rs  batch.rs  error.rs  event.rs  helpers.rs  iter.rs  key.rs  mod.rs  serde.rs  subscriber.rs  test_harness.rs
src/temp/: alloc.rs  allocator.rs  block.rs  error.rs  index.rs  log.rs  mapping.rs  mod.rs  util.rs
