[package]
name = "prism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "~1.1.2"
tokio = { version = "~1.17.0", features = ["rt-multi-thread", "macros"] }

[lib]
name = "libprism"
path = "src/lib.rs"

[[bin]]
name = "prismd"
path = "src/bin/prismd.rs"
test = false
bench = false

[[bin]]
name = "prismctl"
path = "src/bin/prismctl.rs"
test = false
bench = false