[package]
name = "prism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "~1.1.2"
rkyv = { version = "0.7", features = ["validation"] }
sled = "0.34"
slog = { version = "2.7", features = ["nested-values"]}
slog-async = { version = "2.7", features = ["nested-values"] }
slog-json = { version = "2.4", features = ["nested-values"] }
slog-term = { version = "2.8", features = ["nested-values"] }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.18.1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
scopeguard = "1.1"

[lib]
name = "libprism"
path = "src/lib.rs"

[[bin]]
name = "prismd"
path = "src/bin/prismd.rs"
test = false
bench = false

[[bin]]
name = "prismctl"
path = "src/bin/prismctl.rs"
test = false
bench = false
