[package]
name = "prism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
bytes = "1.1"
exitcode = "1.1"
futures = "0.3"
prost = "0.10"
prost-types = "0.10"
rand = "0.8"
serde = "1.0"
serde_bytes = "0.11"
serde_derive = "1.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
sled = "0.34"
slog = { version = "2.7", features = ["nested-values"] }
slog-async = { version = "2.7", features = ["nested-values"] }
slog-json = { version = "2.4", features = ["nested-values"] }
slog-term = { version = "2.8", features = ["nested-values"] }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.19", features = ["rt-multi-thread", "macros", "time", "sync"] }
tonic = "0.7"
tonic-reflection = "0.4"
tonic-health = "0.6"
uuid = { version = "1.1", features = ["v4"] }

[dev-dependencies]
mockall = "0.11"
rstest = "0.15"
tokio-test = "0.4"
lazy_static = "1.4"

[build-dependencies]
tonic-build = "0.7"

[lib]
name = "libprism"
path = "src/lib.rs"

[[bin]]
name = "prismd"
path = "src/bin/prismd.rs"
test = false
bench = false

[[bin]]
name = "prismctl"
path = "src/bin/prismctl.rs"
test = false
bench = false
